# GlottDNN

./: #configure.ac#  .cproject  .gitignore  .licence_boilerplate  .project  COPYING  LICENSE  Makefile  Makefile.in  NEWS  NOTICE  README  README.md  config.h  config.h.in  config.status  configure  configure.ac  mkdocs.yml  test.sh  tmp.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
config/: config_48.cfg  config_default.cfg  config_default_16k.cfg  config_default_48k.cfg  config_orig.cfg  config_pitch_shift.cfg  foo.dnnInfo
dnn_demo/: config_dnn_demo.cfg  config_dnn_demo.py  get_data.sh
doc/: GlottDNN_manual.tex
docs/: index.md  vocoder_config.md
nndata/weights/slt1/: slt1.dnnData  slt1.dnnInfo  slt1.dnnMinMax
python/: GlottDnnScript.py  TrainDnn.py  TrainDnnKeras.py  config.py  config_default_16k.py  config_default_48k.py  config_mfcc.py  data_utils.py  dnnClasses.py  reaper_pitch_analysis.py
src/: Analysis  Makefile  Makefile.am  Makefile.in
src/Analysis.dSYM/Contents/: Info.plist
src/Analysis.dSYM/Contents/Resources/DWARF/: Analysis
src/glott/: Analysis.cpp  Analysis.cpp~  AnalysisFunctions.cpp  AnalysisFunctions.h  ComplexVector.cpp  ComplexVector.h  DebugUtils.cpp  DebugUtils.h  DnnClass.cpp  DnnClass.h  FileIo.cpp  FileIo.h  Filters.h  Filters.h~  InverseFiltering.cpp  InverseFiltering.h  LsfPostFilterMain.cpp  Makefile  Makefile.am~  Makefile.in  PitchEstimation.cpp  PitchEstimation.h  QmfFunctions.cpp  QmfFunctions.h  ReadConfig.cpp  ReadConfig.h  SpFunctions.cpp  SpFunctions.h  Synthesis.cpp  SynthesisFunctions.cpp  SynthesisFunctions.h  Utils.cpp  Utils.h  definitions.cpp  definitions.h
src/glott/.deps/: Analysis.Po  AnalysisFunctions.Po  DebugUtils.Po  FileIO.Po  InverseFiltering.Po  ReadConfig.Po  SpFunctions.Po  definitions.Po
src/gslwrap/: Makefile  Makefile.am  Makefile.in  generate  matrix_double.cc  matrix_double.h  matrix_float.cc  matrix_int.cc  matrix_source.cc  matrix_source.h  random_generator.cc  vector_double.cc  vector_double.h  vector_float.cc  vector_float.h  vector_int.cc  vector_int.h  vector_source.cc  vector_source.h
src/gslwrap/.deps/: matrix_double.Po  matrix_float.Po  matrix_int.Po  random_generator.Po  vector_double.Po  vector_float.Po  vector_int.Po
src/test_gslwrap/: test.cc  test_common.cpp  test_min.cc
src/test_gslwrap/.deps/: test.Po  test_common.Po  test_min.Tpo
wav/: arctic_fe.F0  arctic_fe.F0rea  arctic_fe.GCIrea
